# agentic11

./: .gitignore  README.md  pyproject.toml
General/Agent Artifacts/: ARCHITECTURE.md  BlueStar_Skills_RulesEngine_Integration_v1.0.docx
General/Agent Artifacts/agent-skills/: README.md
General/Architecture/: Architecture.docx  Requirements.docx
General/Data Model/: BlueStar_DataModel_TechSpec_v1.0.docx
config/: README.md  litellm_config.yaml  pipeline_seed.json
deploy/: README.md
docker/: Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: ARCHITECTURE.md  README.md
docs/plans/: 2026-02-27-bluestar-platform-design.md  2026-02-28-persistence-layer-design.md  2026-02-28-persistence-layer-plan.md
scripts/: README.md  download_models.py  seed_dynamodb.py
src/bluestar/: __init__.py
src/bluestar/agents/: README.md  __init__.py  base.py
src/bluestar/api/: README.md  __init__.py  app.py
src/bluestar/core/: README.md  __init__.py  config.py  exceptions.py  protocols.py  types.py
src/bluestar/mcp_servers/: README.md  __init__.py  file_server.py  rules_server.py  sql_server.py
src/bluestar/model_providers/: README.md  __init__.py  bedrock_provider.py  in_process_slm.py  mock_provider.py  protocols.py
src/bluestar/models/: README.md  __init__.py  outputs.py  payroll_record.py  pipeline.py  rules.py  schema_mapping.py
src/bluestar/orchestration/: README.md  (+4 more)
tests/: README.md
tests/fakes/: __init__.py
tests/integration/: conftest.py
tests/unit/: test_config.py  test_payroll_record.py  test_seed_dynamodb.py
(+67 files in other folders)
