[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluestar"
version = "0.1.0"
description = "BlueStar Retirement Services AI-Powered Payroll Processing Platform"
requires-python = ">=3.12"
license = "Proprietary"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "boto3>=1.35",
    "redis>=5.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "structlog>=24.1",
]

[project.optional-dependencies]
agents = [
    "strands-agents>=1.27",
    "strands-agents-tools>=0.1",
    "instructor>=1.14",
    "litellm>=1.50",
]
mcp = [
    "fastmcp>=3.0",
]
slm = [
    "llama-cpp-python>=0.3.8",
]
ingestion = [
    "markitdown>=0.1.5",
    "tiktoken>=0.12",
]
sql = [
    "pyodbc>=5.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "boto3-stubs[dynamodb,s3,sqs,events]>=1.35",
    "respx>=0.21",
    "moto[dynamodb,s3,sqs]>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bluestar"]

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
